ACLOCAL_AMFLAGS=-I m4
AUTOMAKE_OPTIONS = foreign
SUBDIRS = scripts src example test

include_HEADERS = \
		$(top_srcdir)/include/api/ofp.h \
		$(top_srcdir)/include/api/ofp_config.h \
		$(top_srcdir)/include/api/ofp_init.h \
		$(top_srcdir)/include/api/ofp_pkt_processing.h \
		$(top_srcdir)/include/api/ofp_cli.h \
		$(top_srcdir)/include/api/ofp_log.h \
		$(top_srcdir)/include/api/ofp_timer.h \
		$(top_srcdir)/include/api/ofp_types.h \
		$(top_srcdir)/include/api/ofp_socket_types.h \
		$(top_srcdir)/include/api/ofp_socket.h \
		$(top_srcdir)/include/api/ofp_in.h \
		$(top_srcdir)/include/api/ofp_in6.h \
		$(top_srcdir)/include/api/ofp_errno.h \
		$(top_srcdir)/include/api/ofp_hook.h \
		$(top_srcdir)/include/api/ofp_route_arp.h \
		$(top_srcdir)/include/api/ofp_portconf.h \
		$(top_srcdir)/include/api/ofp_debug.h \
		$(top_srcdir)/include/api/ofp_stat.h \
		$(top_srcdir)/include/api/ofp_ioctl.h \
		$(top_srcdir)/include/api/ofp_queue.h \
		$(top_srcdir)/include/api/ofp_sysctl.h \
		$(top_srcdir)/include/api/ofp_utils.h \
		$(top_srcdir)/include/api/ofp_ethernet.h \
		$(top_srcdir)/include/api/ofp_ip.h \
		$(top_srcdir)/include/api/ofp_ip6.h \
		$(top_srcdir)/include/api/ofp_icmp.h \
		$(top_srcdir)/include/api/ofp_icmp6.h \
		$(top_srcdir)/include/api/ofp_ifnet.h \
		$(top_srcdir)/include/api/ofp_if_vlan.h \
		$(top_srcdir)/include/api/ofp_udp.h \
		$(top_srcdir)/include/api/ofp_ip_var.h \
		$(top_srcdir)/include/api/ofp_tcp.h \
		$(top_srcdir)/include/api/ofp_epoll.h \
		$(top_srcdir)/include/api/ofp_ipsec.h \
		$(top_srcdir)/include/api/ofp_ipsec_init.h

noinst_HEADERS = \
		  $(top_srcdir)/include/ofpi_netlink.h \
		  $(top_srcdir)/include/ofpi_pkt_processing.h \
		  $(top_srcdir)/include/ofpi_arp.h \
		  $(top_srcdir)/include/ofpi_avl.h \
		  $(top_srcdir)/include/ofpi_callout.h \
		  $(top_srcdir)/include/ofpi_cli.h \
		  $(top_srcdir)/include/ofpi_config.h \
		  $(top_srcdir)/include/ofpi_debug.h \
		  $(top_srcdir)/include/ofpi_domain.h \
		  $(top_srcdir)/include/ofpi_errno.h \
		  $(top_srcdir)/include/ofpi_ethernet.h \
		  $(top_srcdir)/include/ofpi.h \
		  $(top_srcdir)/include/ofpi_hash.h \
		  $(top_srcdir)/include/ofpi_vnet.h \
		  $(top_srcdir)/include/ofpi_icmp6.h \
		  $(top_srcdir)/include/ofpi_icmp.h \
		  $(top_srcdir)/include/ofpi_igmp.h \
		  $(top_srcdir)/include/ofpi_igmp_var.h \
		  $(top_srcdir)/include/ofpi_if_arp.h \
		  $(top_srcdir)/include/ofpi_if_gre.h \
		  $(top_srcdir)/include/ofpi_if_vlan.h \
		  $(top_srcdir)/include/ofpi_if_vxlan.h \
		  $(top_srcdir)/include/ofpi_ifnet.h \
		  $(top_srcdir)/include/ofpi_inet.h \
		  $(top_srcdir)/include/ofpi_in6.h \
		  $(top_srcdir)/include/ofpi_in6_pcb.h \
		  $(top_srcdir)/include/ofpi_init.h \
		  $(top_srcdir)/include/ofpi_in.h \
		  $(top_srcdir)/include/ofpi_in_pcb.h \
		  $(top_srcdir)/include/ofpi_in_var.h \
		  $(top_srcdir)/include/ofpi_ioctl.h \
		  $(top_srcdir)/include/ofpi_ip6.h \
		  $(top_srcdir)/include/ofpi_ip6_var.h \
		  $(top_srcdir)/include/ofpi_ip6protosw.h \
		  $(top_srcdir)/include/ofpi_ip.h \
		  $(top_srcdir)/include/ofpi_ip_var.h \
		  $(top_srcdir)/include/ofpi_log.h \
		  $(top_srcdir)/include/ofpi_md5.h \
		  $(top_srcdir)/include/ofpi_portconf.h \
		  $(top_srcdir)/include/ofpi_protosw.h \
		  $(top_srcdir)/include/ofpi_queue.h \
		  $(top_srcdir)/include/ofpi_reass.h \
		  $(top_srcdir)/include/ofpi_route.h \
		  $(top_srcdir)/include/ofpi_rt_lookup.h \
		  $(top_srcdir)/include/ofpi_shared_mem.h \
		  $(top_srcdir)/include/ofpi_sockbuf.h \
		  $(top_srcdir)/include/ofpi_socket.h \
		  $(top_srcdir)/include/ofpi_socketvar.h \
		  $(top_srcdir)/include/ofpi_sockopt.h \
		  $(top_srcdir)/include/ofpi_sockstate.h \
		  $(top_srcdir)/include/ofpi_stat.h \
		  $(top_srcdir)/include/ofpi_syscalls.h \
		  $(top_srcdir)/include/ofpi_sysctl.h \
		  $(top_srcdir)/include/ofpi_systm.h \
		  $(top_srcdir)/include/ofpi_tcp_fsm.h \
		  $(top_srcdir)/include/ofpi_tcp.h \
		  $(top_srcdir)/include/ofpi_tcp_offload.h \
		  $(top_srcdir)/include/ofpi_tcp_seq.h \
		  $(top_srcdir)/include/ofpi_tcp_syncache.h \
		  $(top_srcdir)/include/ofpi_tcp_timer.h \
		  $(top_srcdir)/include/ofpi_tcp_var.h \
		  $(top_srcdir)/include/ofpi_tcp6_var.h \
		  $(top_srcdir)/include/ofpi_gre.h \
		  $(top_srcdir)/include/ofpi_timer.h \
		  $(top_srcdir)/include/ofpi_tree.h \
		  $(top_srcdir)/include/ofpi_udp.h \
		  $(top_srcdir)/include/ofpi_udp_var.h \
		  $(top_srcdir)/include/ofpi_udp6_var.h \
		  $(top_srcdir)/include/ofpi_uma.h \
		  $(top_srcdir)/include/ofpi_vxlan.h \
		  $(top_srcdir)/include/ofpi_hook.h \
		  $(top_srcdir)/include/ofpi_util.h \
		  $(top_srcdir)/include/ofpi_tcp_shm.h \
		  $(top_srcdir)/include/ofpi_epoll.h \
		  $(top_srcdir)/include/ofpi_brlock.h \
		  $(top_srcdir)/include/ofpi_ipsec.h \
		  $(top_srcdir)/include/ofpi_ipsec_spd.h \
		  $(top_srcdir)/include/ofpi_ipsec_sad.h

EXTRA_DIST = bootstrap .scmversion
